# mcpilauncher

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  qemu.patch
dll/: CMakeLists.txt  EGL.c  GLESv2.c  SDL.c  X11.c  bcm_host.c
natives/lib/: FAKE.txt  libdbus-1.so.3  libgcc_s.so.1  libgcrypt.so.20  libncursesw.so.5  libstdc++.so.6  libtinfo.so.5
qemu/linux-user/: syscall.c
qemu/linux-user/arm/: syscall_nr.h
stubs/: Makefile  syscall.h
stubs/bcm_host/: Makefile  bcm_host.c  dispmanx.c
stubs/egl/: Makefile  egl.c
stubs/gl/: Makefile  gl.c
stubs/sdl/: Makefile  sdl.c
stubs/x11/: Makefile  x11.c
trampoline/: CMakeLists.txt  trampoline.c
